--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "vue": "^3.5.17",
     "vue-router": "^4.5.1",
     "vue-spinner": "^1.0.4",
-    "vue-toastification": "^2.0.0-rc.5"
+    "vue-toastification": "^2.0.0-rc.5",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.0",
