added vuetify + icons

--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "vue-router": "^4.5.1",
     "vue-spinner": "^1.0.4",
     "vue-toastification": "^2.0.0-rc.5",
+    "vuetify": "^3.9.3",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@mdi/font": "^7.4.47",
     "@vitejs/plugin-vue": "^6.0.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
